x[project]
name = "business-control-backend"
version = "0.1.0"
description = "Backend API for managing business finances, including revenue, product expenses, and customer control. Built as a scalable service for small and medium businesses."
authors = [
    {name = "Itamaro"}
]
readme = "README.md"
requires-python = "3.12.12"
dependencies = [
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-filter (>=25.2,<26.0)",
    "django-guardian (>=3.2.0,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-allauth (>=65.13.1,<66.0.0)"
]

[dependency-groups]
dev = [
    "taskipy (>=1.14.1,<2.0.0)",
    "ipython (>=9.9.0,<10.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-debug-toolbar (>=6.1.0,<7.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "bandit (>=1.9.2,<2.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "faker (>=40.1.0,<41.0.0)",
    "rich (>=14.2.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
